--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fs": "0.0.1-security",
     "multer": "^1.4.2",
     "xml-c14n": "0.0.6",
-    "xmldom": "^0.3.0"
+    "xmldom": "^0.3.0",
+    "xpath": "0.0.27"
   }
 }
