--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "multer": "^1.4.2",
+    "node-forge": "^0.9.1",
     "xml-c14n": "0.0.6",
     "xmldom": "^0.3.0",
     "xpath": "0.0.27"
